# AvionicsSystems

./: .gitignore  AvionicsSystems.cpp  AvionicsSystems.h  CMakeLists.txt  FlightControl.h  GPSsim.cpp  GPSsim.h  README.md  SensorSim.cpp  SensorSim.h  UserInterface.cpp  UserInterface.h  fetch_gps_data.py  run_ml_model.py  vcpkg.json
